# pydantic-ai-learn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  WARP.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.cursor/rules/: code-agent.mdc  examples-guide.mdc  project-structure.mdc  python-style.mdc  quality-checks.mdc  tools-overview.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: code-quality.yml  tests.yml
code_agent/: ARCHITECTURE.md  CHANGELOG.md  README.md  __init__.py
code_agent/adapters/: __init__.py  context.py  graph.py  workflow.py
code_agent/config/: __init__.py  execution.py  logging.py  manager.py  mcp.py  mcp_legacy.py  tools.py
code_agent/core/: __init__.py  a2a_integration.py  agent.py  agent_registry.py  config.py  hierarchical_agent.py  model_router.py  prompt_enhancer.py  request_classifier.py  routing_config.py  routing_types.py  sub_agent.py  task_delegator.py  telemetry_collector.py  telemetry_config.py  telemetry_types.py  types.py
code_agent/examples/: __init__.py  a2a_integration.py  adapter_features.py  advanced_features.py  auto_debug.py  basic_usage.py  code_execution.py  context_management.py  custom_workflows.py  enhanced_hierarchical.py  graph.py  hierarchical_a2a.py  hierarchical_agents.py  main.py  quality_tools.py  routing_example.py  telemetry_example.py  terminal_ui.py  test_execution_imports.py  verify_production_enhancements.py  workflow_composition.py
code_agent/tools/: __init__.py  analyzer.py  executor.py  generator.py  refactoring.py  terminal_sandbox.py  terminal_session.py  toolkit.py  validators.py
code_agent/ui/: __init__.py  config.py  input_handler.py  inputs.py  runner.py  session_manager.py  streaming.py  terminal.py
code_agent/utils/: __init__.py  errors.py  logging.py  terminal_exec.py
code_agent/workflows/: README.md  __init__.py  quality.py
examples/: __init__.py  simple_demo.py
examples/basic/: __init__.py  agent_iter_async_for.py  agent_iter_next.py  format_conversation_demo.py  hello_world.py  instructions.py  restriction.py  roulette_wheel.py  run_agent.py  run_events.py  run_stream_event_stream_handler.py  streaming_iter.py  (+3 more)
scripts/: check_circular_deps.py  clean.ps1  clean.sh  format.ps1  format.sh  lint.ps1  lint.sh  run_all_checks.py  run_examples.ps1  run_examples.sh  run_tests.ps1  run_tests.sh  setup.ps1  setup.sh  test_import.py
tests/: test_bash_tool.py  test_file_editing_toolkit.py  test_filesystem_tools.py  test_formatter.py  test_formatter_extended.py  test_task_planning_toolkit.py
tools/: PLATFORM_NOTES.md  README_BASH_TOOL.md  README_FILESYSTEM_TOOLS.md  README_FILE_EDITING_TOOLKIT.md  README_TASK_PLANNING_TOOLKIT.md  __init__.py  bash_tool.py  code_agent_toolkit.py  file_editing_toolkit.py  filesystem_tools.py  function_tool_output.py  prepare_tools_example.py  task_planning_toolkit.py  tool_only_if_42.py  tool_parameter_example.py  tool_return_example.py
utils/: __init__.py  _fmt_test.py  check_url.py  formatter.py  terminal_stream.py  terminal_stream_component.py
(+93 files in other folders)
